Update theme to be v4 compatible

--- a/assets/styles/scss/partials/_variables.scss
+++ b/assets/styles/scss/partials/_variables.scss
@@ -19,6 +19,7 @@ $nav-color-active: $alt-color;
 $nav-color: $base-color;
 $search-color: #D7D7D7;
 $footer-color: rgba(120, 116, 116, 1);
+$hover-orange: #f26522;
 
 $top-margin: 40px;
 
