--- a/partials/nav.hbs
+++ b/partials/nav.hbs
@@ -1,6 +1,6 @@
 <aside class="site-meta">
     <a href="/" class>
-        <img class="headshot" src="/assets/img/logo.png" srcset="/assets/img/logo@2x.png 2x">
+        <img class="headshot" src="{{asset "img/logo.png"}}" srcset="{{asset "img/logo@2x.png"}} 2x">
     </a>
     <p class="intro-blurb">jsDelivr - a free open source CDN for npm and github</p>
     <nav class="social">
