--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -938,6 +938,10 @@ pre {
   margin: -2.25em 0 3em;
 }
 
+.kg-image {
+  height: auto;
+}
+
 .kg-bookmark-card {
   width: 100%;
   position: relative;
