--- a/assets/styles/scss/partials/_modules.scss
+++ b/assets/styles/scss/partials/_modules.scss
@@ -263,6 +263,10 @@
     margin: -2.25em 0 3em;
 }
 
+.kg-image {
+    height: auto;
+}
+
 .kg-bookmark-card {
     width: 100%;
     position: relative;
