--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -4,34 +4,37 @@
 <!-- </div> -->
 
 {{! This is the post loop - each post will be output using this markup }}
-{{#foreach posts}}
-	<article class="{{post_class}}">
-		<header class="post-header">
-			<h1 class="post-title"><a href="{{url}}">{{{title}}}</a></h1>
-		</header>
+{{#get "posts" filter="tag:-content" limit=@config.posts_per_page page=pagination.page }}
+	{{#foreach posts}}
+		<article class="{{post_class}}">
+			<header class="post-header">
+				<h1 class="post-title"><a href="{{url}}">{{{title}}}</a></h1>
+			</header>
 
-		{{#if feature_image}}
-			<figure class="author-image">
-				<img src="{{ img_url feature_image }}" alt="">
-			</figure>
-		{{/if}}
+			{{#if feature_image}}
+				<figure class="author-image">
+					<img src="{{ img_url feature_image }}" alt="">
+				</figure>
+			{{/if}}
 
-		<section class="post-excerpt">
-			<p>{{content words="40"}} <a class="read-more" href="{{url}}">Read the full post &raquo;</a></p>
-		</section>
-
-		<footer class="post-meta">
-			<section class="post-info">
-				<time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time>
-				{{tags prefix=" on "}}
+			<section class="post-excerpt">
+				<p>{{content words="40"}} <a class="read-more" href="{{url}}">Read the full post &raquo;</a></p>
 			</section>
 
-			<section class="post-comments">
-				<a href="{{url}}#disqus_thread">Comments</a>
-			</section>
-		</footer>
-	</article>
-{{/foreach}}
+			<footer class="post-meta">
+				<section class="post-info">
+					<time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time>
+					{{tags prefix=" on "}}
+				</section>
 
-{{! Previous/next page links - displayed on every page }}
-{{pagination}}
+				<section class="post-comments">
+					<a href="{{url}}#disqus_thread">Comments</a>
+				</section>
+			</footer>
+		</article>
+	{{/foreach}}
+
+	{{! Previous/next page links - displayed on every page }}
+	{{pagination}}
+
+{{/get}}
