feat: add noindex tag

--- a/default.hbs
+++ b/default.hbs
@@ -6,6 +6,7 @@
 
 		<title>{{meta_title}}</title>
 
+    <meta name="robots" content="noindex">
 		<meta name="HandheldFriendly" content="True"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
